<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F5F5F5"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/app_title_bar"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="24dp"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <ImageButton
            android:id="@+id/btnNewTask"
            android:layout_width="48dip"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_setting_desc"
            android:src="@drawable/content_new" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/btnNewTask"
            android:background="@drawable/app_title_bar_line"
            android:contentDescription="@string/app_title_bar_desc" />
    </RelativeLayout>

    <ListView
        android:id="@+id/scheduleList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:dividerHeight="5dp" />

</LinearLayout>