<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/calContent"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/app_title_bar"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btnMenu"
            android:layout_width="48dip"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_setting_desc"
            android:src="@drawable/action_settings" />

        <TextView
            android:id="@+id/CalTitle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="24dp"
            android:layout_toRightOf="@id/btnMenu"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <ImageButton
            android:id="@+id/btnNewTask"
            android:layout_width="48dip"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_setting_desc"
            android:src="@drawable/content_new" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/btnNewTask"
            android:background="@drawable/app_title_bar_line"
            android:contentDescription="@string/app_title_bar_desc" />
    </RelativeLayout>

 
	<com.yuzx.taskcoach.view.BorderText
	    android:layout_width="fill_parent" 
	    android:layout_height="38dp"
        android:gravity="center"
        android:id="@+id/toptextCal"
        android:textSize="15sp"
        android:drawableLeft="@drawable/previous_year"
        android:drawableRight="@drawable/next_year"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
	/>

    <ViewFlipper
        android:id="@+id/flipperCal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>