<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/app_title_bar"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btnSaveNote"
            android:layout_width="48dip"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_setting_desc"
            android:src="@drawable/navigation_accept" />

        <ImageView
            android:id="@+id/editNoteTitleLine"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/btnSaveNote"
            android:background="@drawable/app_title_bar_line"
            android:contentDescription="@string/app_title_bar_desc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="24dp"
            android:layout_toRightOf="@id/editNoteTitleLine"
            android:gravity="center_vertical"
            android:text="@string/schedule_title"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <ImageButton
            android:id="@+id/btnCancelNote"
            android:layout_width="48dip"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_setting_desc"
            android:src="@drawable/navigation_cancel" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/btnCancelNote"
            android:background="@drawable/app_title_bar_line"
            android:contentDescription="@string/app_title_bar_desc" />
    </RelativeLayout>

  

        <com.yuzx.taskcoach.view.BorderEditText
            android:id="@+id/et_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="input title"
            android:singleLine="true" 
            android:layout_margin="5dp"            
            />

        <com.yuzx.taskcoach.view.BorderEditText
            android:id="@+id/et_content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="top"
            android:hint="input content"
            android:layout_margin="5dp" 
            />
 

</LinearLayout>