<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#DCDCDC"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@drawable/app_title_bar"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btnOneDayBack"
            android:layout_width="48dip"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_setting_desc"
            android:src="@drawable/navigation_back" />

        <ImageView
            android:id="@+id/titleBarLine"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/btnOneDayBack"
            android:background="@drawable/app_title_bar_line"
            android:contentDescription="@string/app_title_bar_desc" />

        <TextView
            android:id="@+id/tvOneDayTitle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="24dp"
            android:layout_toRightOf="@id/titleBarLine"
            android:gravity="center_vertical"
            android:text="@string/note_title"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <ImageButton
            android:id="@+id/btnOneDayNew"
            android:layout_width="48dip"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_setting_desc"
            android:src="@drawable/content_new" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/btnOneDayNew"
            android:background="@drawable/app_title_bar_line"
            android:contentDescription="@string/app_title_bar_desc" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:orientation="vertical" >

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#0000FF" >
                </View>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="#FFFFFF"
                    android:drawableLeft="@drawable/activity"
                    android:drawableRight="@drawable/next_year"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="  日程"
                    android:textSize="17sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#D3D3D3" />

                <ListView
                    android:id="@+id/lvOneDaySchedule"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:orientation="vertical" >

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#008000" >
                </View>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="#FFFFFF"
                    android:drawableLeft="@drawable/note"
                    android:drawableRight="@drawable/next_year"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="  记事"
                    android:textSize="17sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#D3D3D3" />

                <ListView
                    android:id="@+id/lvOneDayNote"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>